Add cloud run solve, schedule save, regen

--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,8 @@ NEXT_PUBLIC_SUPABASE_ANON_KEY=your-anon-key
 
 # App Password (for authentication)
 APP_PASSWORD=your-secure-password
+
+# OR-Tools Solver API (Cloud Run)
+# Leave empty to use client-side backtracking solver
+# Set to your Cloud Run URL to use OR-Tools CP-SAT solver
+SCHEDULER_API_URL=https://school-scheduler-api-xxxxx-uc.a.run.app
