--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "solver": "cd backend && ./run-local.sh"
   },
   "dependencies": {
     "@radix-ui/react-alert-dialog": "^1.0.5",
