--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "highs": "^1.8.0",
+    "html-to-image": "^1.11.13",
+    "jszip": "^3.10.1",
     "lucide-react": "^0.309.0",
     "next": "14.1.0",
     "react": "^18.2.0",
