Update env indicator db state

--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,31 @@
-# Supabase Configuration
-# Get these values from your Supabase project settings > API
-NEXT_PUBLIC_SUPABASE_URL=https://your-project.supabase.co
-NEXT_PUBLIC_SUPABASE_ANON_KEY=your-anon-key
+# Supabase Configuration (PRODUCTION DATABASE)
+NEXT_PUBLIC_SUPABASE_URL="https://your-project.supabase.co"
+NEXT_PUBLIC_SUPABASE_ANON_KEY="your-anon-key"
+# Database environment indicator - set to "production" to show warning in local dev
+NEXT_PUBLIC_SUPABASE_ENV=production
 
-# App Password (for authentication)
-APP_PASSWORD=your-secure-password
+# PREVIEW DATABASE
+#NEXT_PUBLIC_SUPABASE_URL="https://your-preview-project.supabase.co"
+#NEXT_PUBLIC_SUPABASE_ANON_KEY="your-preview-anon-key"
+#NEXT_PUBLIC_SUPABASE_ENV=preview
 
-# OR-Tools Solver API (Cloud Run)
-# Leave empty to use client-side backtracking solver
-# Set to your Cloud Run URL to use OR-Tools CP-SAT solver
-SCHEDULER_API_URL=https://school-scheduler-api-xxxxx-uc.a.run.app
+# App Password (optional - leave empty to disable auth)
+APP_VIEW_PASSWORD=
+APP_ADMIN_PASSWORD=
+
+# OR-Tools Solver API (server-side, used by Vercel proxy)
+# For local development (run: cd backend && ./run-local.sh):
+SCHEDULER_API_URL=http://localhost:8080
+# To test against Cloud Run production:
+# SCHEDULER_API_URL=https://school-scheduler-api-xxxxx.us-central1.run.app
+
+# Direct Cloud Run URL (client-side, bypasses Vercel's 10s timeout)
+# Set this to call Cloud Run directly from the browser for longer solver runs
+# Leave empty to use Vercel proxy only (subject to 10s timeout on free tier)
+NEXT_PUBLIC_SOLVER_URL=http://localhost:8080
+# For production:
+# NEXT_PUBLIC_SOLVER_URL=https://school-scheduler-api-xxxxx.us-central1.run.app
+
+# Debug mode for solver (enables verbose logging in backend)
+# Set to "1" or "true" to enable, run backend with: DEBUG_SOLVER=1 ./run-local.sh
+# DEBUG_SOLVER=1
